--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,21 @@
 body {
-  background-color: var(--tg-theme-bg-color);
-  color: var(--tg-theme-text-color);
+  color-scheme: var(--tg-color-scheme);
   margin: 0;
   padding: 0;
 }
 
-a {
-  color: var(--tg-theme-link-color);
-}
-
 .btn {
-  background-color: var(--tg-theme-button-color);
-  color: var(--tg-theme-button-text-color);
-  margin: 10px 5px;
-}
-
-.tooltip {
-  color: var(--tg-theme-hint-color);
-}
-
-.secondary-bg {
-  background-color: var(--tg-theme-secondary-bg-color);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 30px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
 }
   
 .header {
@@ -44,21 +39,21 @@ a {
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  padding: 20px;
+  gap: 10px;
+  padding: 10px;
 }
 
 .product-card {
-  border: 1px solid #ddd;
+  text-align: center;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  width: 300px;
+  width: 150px;
 }
 
 .product-card img {
-  max-width: 100%;
-  height: auto;
+  width: 150px;
+  height: 150px;
+  border-radius: 5px;
 }
 
 .price {
@@ -66,11 +61,4 @@ a {
   margin: 10px 0;
 }
 
-.buy-btn {
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
 
