--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,15 @@ body {
 .product-card {
   text-align: center;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
   width: 150px;
+  background-color: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
 }
 
 .product-card img {
   width: 150px;
   height: 150px;
-  border-radius: 5px;
+  border-radius: 30px;
 }
 
 .price {
