--- a/css/style.css
+++ b/css/style.css
@@ -51,22 +51,22 @@ body {
 .product-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   gap: 10px;
   padding: 10px;
 }
 
 .product-card {
   text-align: center;
-  padding: 20px;
+  padding: 0;
   border-radius: 15px;
-  width: 150px;
   /* background-color: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)) var(--bg_color); */
   background-color: var(--secondary_bg_color);
 }
 
 .product-card img {
-  width: 150px;
   height: 150px;
+  width: auto;
   border-radius: 30px;
 }
 
