--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,12 @@ body {
 }
 
 .product-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 5px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
   padding: 5px;
 }
+
 
 .product-card {
   text-align: center;
