--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,21 @@
 :root {
-  --bg_color: var(--tg-theme-bg-color);
+  /* --bg_color: var(--tg-theme-bg-color);
   --text_color: var(--tg-theme-text-color);
   --hint_color: var(--tg-theme-hint-color);
   --link_color: var(--tg-theme-link-color);
   --button_color: var(--tg-theme-button-color);
   --button_text_color: var(--tg-theme-button-text-color);
-  --secondary_bg_color: var(--tg-theme-secondary-bg-color);
-}
+  --secondary_bg_color: var(--tg-theme-secondary-bg-color); */
 
+  --bg_color: #1d2733;
+  --text_color: #ffffff;
+  --hint_color: #7d8b99;
+  --link_color: #5eabe1;
+  --button_color: #50a8eb;
+  --button_text_color: #ffffff;
+  --secondary_bg_color: #151e27;
+}
+  
 body {
   background: var(--bg_color);
   color: var(--text_color);
