--- a/css/style.css
+++ b/css/style.css
@@ -60,15 +60,18 @@ body {
 
 .product-card {
     text-align: left;
-    border-radius: 15px;
+    border-radius: 8%;
     width: 100%;
     background-color: var(--secondary_bg_color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .product-card img {
     width: 100%;
     height: 250px;
-    border-radius: 30px;
+    border-radius: 8%;
 }
 
 .price {
@@ -86,7 +89,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px 5px;
+    margin: 10px 0;
+    padding: 0 10px;
 }
 
 .btn {
@@ -94,7 +98,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 5px 0px;
-    width: 90%;
+    width: 95%;
     height: 50px;
     font-size: 1.5em;
     border-radius: 30px;
